tests/cmd_cartesian_bad.out
./cmd_cartesian_bad.svx:3:12: error: Expecting "GRID", "MAGNETIC", or "TRUE"
 *cartesian fridge
            ^~~~~~
./cmd_cartesian_bad.svx:4:12: error: Expecting "GRID", "MAGNETIC", or "TRUE"
 *cartesian fridge 1.0 degrees
            ^~~~~~
./cmd_cartesian_bad.svx:5:22: error: Unknown units ""
 *cartesian magnetic 0
                      ^
./cmd_cartesian_bad.svx:6:17: error: Expecting numeric field, found "degrees"
 *cartesian true degrees
                 ^~~~~~~
./cmd_cartesian_bad.svx:7:12: error: Expecting "GRID", "MAGNETIC", or "TRUE"
 *cartesian grid2degrees
            ^~~~~~~~~~~~
./cmd_cartesian_bad.svx:8:12: error: Expecting "GRID", "MAGNETIC", or "TRUE"
 *cartesian magnetic2 degrees
            ^~~~~~~~~

Removing trailing traverses...

Concatenating traverses...

Simplifying network...

Calculating network...

Calculating traverses...

Calculating trailing traverses...

Calculating statistics...

Survey contains 1 survey station, joined by 0 legs.
There are 0 loops.
Total length of survey legs =    0.00m (   0.00m adjusted)
Total plan length of survey legs =    0.00m
Total vertical length of survey legs =    0.00m
   1 0-node.
There were 0 warning(s) and 6 error(s) - no output files produced.
